--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html lang="es">
 <head>
 <meta charset="utf-8"/>
-<title>Latido</title>
+<title>Home Page</title>
 <link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="css/corazon.css">
+<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body>
-    Hola mundo <h1>Yuliana</h1> 
-    <div id="latido">
-       <h1 id="texto">Corazon</h1>
-        <img src="img/corazon.jpg" alt="corazon" />
+<body><div class="wrapper">
+    <div class="one">
+        <p> " Mi portafolio Yuliana "</p>
+         <a href="#">HOME</a>
+         <a href="#">Contacto</a>
+         <a href="#">Perfil</a>
     </div>
+
+    <div class="two">Two</div>
+   
+    <div class="three">
+        <div id="latido">
+            <h1 id="texto">Corazon</h1>
+             <img src="img/corazon.jpg" alt="corazon" />
+         </div>
+    </div>
+
+    <div class="four">Four</div>
+    <div class="five">Five</div>
+    <div class="six">Six</div>
+    <div class="seven">Seven</div>
+    <div class="eigth">Eigth</div>
+    <div class="nine">Pie</div>
+  </div>
 </body>
 </html>
