--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
          <a href="#">Perfil</a>
     </div>
 
-    <div class="two">Two</div>
+    <div class="two">
+        <p class="cent">Menu</p>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Perfil</a></li>
+            <li>Halloumi</li>
+        </ul>
+    </div>
    
     <div class="three">
         <div id="latido">
@@ -29,7 +37,7 @@
     <div class="six">Six</div>
     <div class="seven">Seven</div>
     <div class="eigth">Eigth</div>
-    <div class="nine">Pie</div>
+    <div class="nine">©YulianaGarciaGutierrez</div>
   </div>
 </body>
 </html>
