--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <link rel="stylesheet" type="text/css" href="css/corazon.css">
 <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body><div class="wrapper">
+<body>
+    <div class="wrapper">
     <div class="one">
         <p> " Mi portafolio Yuliana "</p>
          <a href="#">HOME</a>
-         <a href="#">Contacto</a>
+         <a href="content/contacto.html">Contacto</a>
          <a href="#">Perfil</a>
     </div>
 
