--- a/content/catalogo.html
+++ b/content/catalogo.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+<script src="../js/paginacion.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
@@ -22,14 +23,14 @@
 
     <div class="ten"> 
         <div class="input-group flex-nowrap">
-            <span class="input-group-text" id="addon-wrapping">T</span>
+            <span class="input-group-text" id="addon-wrapping">🔎</span>
             <input type="text" class="form-control" style="width:30px" placeholder="Busqueda" aria-label="Search">
             <button class="btn btn-success" type="button" id="button-addon2">Buscar</button>  
         </div>
         <br>
 
-        <div class="row row-cols-1 row-cols-md-4 g-5">
-            <div class="col">
+        <div id="listado-articulos" class="row row-cols-1 row-cols-md-4 g-5">
+            <div id="1" style="display:block;" class="col">
               <div class="card h-100">
                 <img src="../img/corazon.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -40,27 +41,7 @@
               </div>
             </div>
 
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
+            <div id="2" style="display:block;" class="col">
               <div class="card h-100">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
@@ -70,7 +51,57 @@
               </div>
             </div>
 
-            <div class="col">
+            <div id="3" style="display:block;" class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer</p>
+                </div>
+              </div>
+            </div>
+
+            <div id="4" style="display:block;" class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer</p>
+                </div>
+              </div>
+            </div>
+            
+            <div id="5" style="display:none;" class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer</p>
+                </div>
+              </div>
+            </div>
+
+            <div id="6" style="display:none;" class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer</p>
+                </div>
+              </div>
+            </div>
+
+            <div id="7" style="display:none;" class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer</p>
+                </div>
+              </div>
+            </div>
+
+              <div id="8" style="display:none;" class="col">
                 <div class="card h-100">
                   <img src="..." class="card-img-top" alt="...">
                   <div class="card-body">
@@ -80,7 +111,7 @@
                 </div>
               </div>
 
-              <div class="col">
+              <div id="9" style="display:none;" class="col">
                 <div class="card h-100">
                   <img src="..." class="card-img-top" alt="...">
                   <div class="card-body">
@@ -90,7 +121,7 @@
                 </div>
               </div>
 
-              <div class="col">
+              <div id="10" style="display:none;" class="col">
                 <div class="card h-100">
                   <img src="..." class="card-img-top" alt="...">
                   <div class="card-body">
@@ -100,42 +131,22 @@
                 </div>
               </div>
 
-              <div class="col">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer</p>
-                  </div>
-                </div>
-              </div> 
-
-              <div class="col">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer</p>
-                  </div>
-                </div>
-              </div>
-
-          </div>
+          </div> <!--Listado-->
 
 
         </br></br>
           <nav aria-label="Page navigation example">
             <ul class="pagination">
               <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
+                <a id="atras" class="page-link not-active" href="#"  aria-label="Previous">
                   <span aria-hidden="true">&laquo;</span>
                 </a>
               </li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a onclick="page1()" id="informacion-pagina" class="page-link" href="#">1</a></li>
+              <li class="page-item"><a onclick="page2()" class="page-link" href="#">2</a></li>
+              <li class="page-item"><a onclick="page3()" id="informacion-pagina3" class="page-link" href="#">3</a></li>
               <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
+                <a id="siguiente" class="page-link not-active" href="#" aria-label="Next">
                   <span aria-hidden="true">&raquo;</span>
                 </a>
               </li>
