--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>Home Page</title>
 <link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/corazon.css">
 <link rel="stylesheet" type="text/css" href="css/estilos.css">
 
 </head>
@@ -17,33 +16,57 @@
     <div class="wrapper">
     <div class="one">
         <p> " Mi portafolio Yuliana "</p>
-         <a href="#">HOME</a>
-         <a href="content/contacto.html">Contacto</a>
-         <a href="#">Perfil</a>
+         <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand btn btn-secondary" href="#">🏠Home</a>
+              <a class="navbar-brand btn btn-secondary" href="content/contacto.html">☎️Contacto</a>
+              <a class="navbar-brand btn btn-secondary" href="#">🧑🏻Perfil</a>
+              <a class="navbar-brand btn btn-secondary" href="content/catalogo.html">🧑🏻‍💻Proyectos</a>
+            </div>
+          </nav>
     </div>
 
-    <div class="two">
-        <p class="cent">Menu</p>
-        <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Perfil</a></li>
-            <li>Halloumi</li>
-        </ul>
+    <div class="ten">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/corazon.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/2.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </div>
    
-    <div class="three">
-        <div id="latido">
-            <h1 id="texto">Corazon</h1>
-             <img src="img/corazon.jpg" alt="corazon" />
-         </div>
-    </div>
-
-    <div class="four">Four</div>
-    <div class="five">Five</div>
-    <div class="six">Six</div>
-    <div class="seven">Seven</div>
-    <div class="eigth">Eigth</div>
     <div class="nine">©YulianaGarciaGutierrez</div>
   </div>
 </body>
