Modificacion del menu principal y el fotter

--- a/content/catalogo.html
+++ b/content/catalogo.html
@@ -14,12 +14,17 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
     <div class="wrapper">
-        <div class="one">
-            <p> " Mi portafolio Yuliana "</p>
-             <a href="../index.html">HOME</a>
-             <a href="#">Contacto</a>
-             <a href="#">Perfil</a>
-        </div>
+      <div class="one">
+        <p> " Mi portafolio Yuliana "</p>
+         <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand btn btn-secondary" href="../index.html">🏠Home</a>
+              <a class="navbar-brand btn btn-secondary" href="contacto.html">☎️Contacto</a>
+              <a class="navbar-brand btn btn-secondary" href="#">🧑🏻Perfil</a>
+              <a class="navbar-brand btn btn-secondary" href="catalogo.html">🧑🏻‍💻Proyectos</a>
+            </div>
+          </nav>
+    </div>
 
     <div class="ten"> 
         <div class="input-group flex-nowrap">
@@ -156,7 +161,20 @@
     </div> <!--ten-->
 
 
-    <div class="nine">©YulianaGarciaGutierrez</div>
+    <div class="nine">
+          <center>
+            <span>
+              <button type="button" class="btn btn-outline-warning"><img src="../img/email.png"/> </button>  
+              <button type="button" class="btn btn-outline-info"><img src="../img/facebook.png"/> </button>  
+              <button type="button" class="btn btn-outline-danger"><img src="../img/youtube.png"/> </button>  
+              <button type="button" class="btn btn-outline-dark"><img src="../img/logotipos.png"/> </button> 
+            </span>
+            <br>
+            Copyright 2024©YulianaGarciaGutierrez
+          <br>
+          <a href="contacto.html" class="link-dark">Más Información</a>
+      </center>
+    </div>
 </div>
     
 </body>
