--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p> " Mi portafolio Yuliana "</p>
          <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand btn btn-secondary" href="#">🏠Home</a>
+              <a class="navbar-brand btn btn-secondary" href="index.html">🏠Home</a>
               <a class="navbar-brand btn btn-secondary" href="content/contacto.html">☎️Contacto</a>
               <a class="navbar-brand btn btn-secondary" href="#">🧑🏻Perfil</a>
               <a class="navbar-brand btn btn-secondary" href="content/catalogo.html">🧑🏻‍💻Proyectos</a>
@@ -67,7 +67,20 @@
           </div>
     </div>
    
-    <div class="nine">©YulianaGarciaGutierrez</div>
+    <div class="nine">
+      <center>
+          <span>
+            <button type="button" class="btn btn-outline-warning"><img src="img/email.png"/> </button>  
+            <button type="button" class="btn btn-outline-info"><img src="img/facebook.png"/> </button>  
+            <button type="button" class="btn btn-outline-danger"><img src="img/youtube.png"/> </button>  
+            <button type="button" class="btn btn-outline-dark"><img src="img/logotipos.png"/> </button> 
+          </span>
+          <br>
+          Copyright 2024©YulianaGarciaGutierrez
+        <br>
+        <a href="content/contacto.html" class="link-dark">Más Información</a>
+      </center>
+    </div>
   </div>
 </body>
 </html>
