Cambios en catalogo primeras tarjetas

--- a/content/catalogo.html
+++ b/content/catalogo.html
@@ -48,10 +48,11 @@
 
             <div id="2" style="display:block;" class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../img/pag.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer</p>
+                  <h5 class="card-title">Paginacion</h5>
+                  <a href="paginacionExample.html">Enlace</a>
+                  <p class="card-text">Ejemplo</p>
                 </div>
               </div>
             </div>
@@ -60,7 +61,8 @@
               <div class="card h-100">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Cuadricula</h5>
+                    <a href="cuadricula.html">Enlace</a>
                   <p class="card-text">This is a longer</p>
                 </div>
               </div>
